<resources>
    <string name="app_name">Kido</string>
    <string name="app_title">Kido</string>
    <string name="app_company">© 2015 Progrema Studio, Inc.</string>
    <string name="app_copy_right">All rights reserved.</string>
    <string name="app_navigation_drawer_open">Open navigation drawer</string>
    <string name="app_navigation_drawer_close">Close navigation drawer</string>
    <string name="app_action_settings">Settings</string>
    <string name="fmt_percentage">{percentage} %</string>
    <string name="fmt_volume">{volume} mL</string>
    <string name="fmt_feeding_today">{hour}h {minute}m {second}s</string>
    <string name="fmt_date_complete">{day}, {date} {month} {year}</string>
    <string name="fmt_day_only">{day}</string>
    <string name="fmt_date_simple">{date} {month} {year}</string>
    <string name="fmt_age">{day} days old</string>
    <string name="fmt_time">{hour}:{minute}</string>
    <string name="fmt_duration">{hour}h {minute}m {second}s</string>
    <string name="fmt_duration_in_minute">{minute}m</string>
    <string name="fmt_time_span">{start} - {end}</string>
    <string name="fmt_last_activity">{time}</string>
    <string name="fmt_night_percentage">{percentage}%</string>
    <string name="fmt_nap_percentage">{percentage}%</string>
    <string name="fmt_night_duration">{hour}h {minute}m {second}s</string>
    <string name="fmt_nap_duration">{hour}h {minute}m {second}s</string>
    <string name="fmt_sleep_percentage">Sleep {percentage}%</string>
    <string name="fmt_active_percentage">Active {percentage}%</string>
    <string name="fmt_sleep_duration">{hour}h {minute}m {second}s</string>
    <string name="fmt_active_duration">Active {hour}h {minute}m {second}s</string>
    <string name="fmt_total_activity_number">{value} times</string>
    <string name="fmt_total_activity_number_initial">0 times</string>
    <string name="fmt_diaper_used">Diaper used {value} pieces</string>
    <string name="fmt_activity_last">{value}</string>
    <string name="fmt_activity_last_initial">No data</string>
    <string name="str_Last_type">Last type</string>
    <string name="str_Timeline">Timeline</string>
    <string name="str_Feeding">Feeding</string>
    <string name="str_Add_Feeding">+Feeding</string>
    <string name="str_Diaper">Diaper</string>
    <string name="str_Add_Diaper">+Diaper</string>
    <string name="str_Sleep">Sleep</string>
    <string name="str_Breastfeeding">Breastfeeding</string>
    <string name="str_Breast_milk_pumping">Breast milk pumping</string>
    <string name="str_Pumped_milk_feeding">Pumped milk feeding</string>
    <string name="str_Formula_milk_feeding">Formula milk feeding</string>
    <string name="str_Solid_food_meal">Solid food meal</string>
    <string name="str_Add_Sleep">+Sleep</string>
    <string name="str_Growth">Growth</string>
    <string name="str_Add_Growth">+Growth</string>
    <string name="str_Pumping">Pumping</string>
    <string name="str_Disease">Disease</string>
    <string name="str_Vaccine">Vaccine</string>
    <string name="str_Parent">Parent</string>
    <string name="str_Baby">Baby</string>
    <string name="str_Activity_Log">Activity Log</string>
    <string name="str_Open_navigation_drawer">Open navigation drawer</string>
    <string name="str_Close_navigation_drawer">Close navigation drawer</string>
    <string name="str_Example_action">Example action</string>
    <string name="str_Add_Baby">Add Baby</string>
    <string name="str_Delete_Baby">Delete Baby</string>
    <string name="str_Edit_Baby">Edit Baby</string>
    <string name="str_Email_Report">Email Report</string>
    <string name="str_Settings">Settings</string>
    <string name="str_About_Kido">About Kido</string>
    <string name="str_About">About</string>
    <string name="str_Logout">Log out</string>
    <string name="str_Help">Help</string>
    <string name="str_Create_Disease_Log">Create Disease Log</string>
    <string name="str_Create_Vaccine_Log">Create Vaccine Log</string>
    <string name="str_Baby_Grow_Chart">Baby Grow Chart</string>
    <string name="str_Wet">Wet</string>
    <string name="str_Dry">Dry</string>
    <string name="str_Mix">Mix</string>
    <string name="str_ok">ok</string>
    <string name="str_Please_input_all_required_data">Please input all required data.</string>
    <string name="str_This_user_name_is_already_exist_Please_login">This user name is already exist. Please login.</string>
    <string name="str_Wrong_username_and_password">Wrong username and password.</string>
    <string name="str_This_username_is_not_registered_Please_register">This username is not registered. Please register.</string>
    <string name="str_Device_is_not_supporting_image_capture">Device is not supporting image capture</string>
    <string name="str_No_baby_yet_Please_fill_in_your_baby_data">No baby yet. Please fill in your baby data.</string>
    <string name="str_At_least_one_baby_must_be_created">At least one baby must be created</string>
    <string name="str_Gallery_is_not_exist_on_device">Gallery is not exist on device</string>
    <string name="str_Device_is_not_supporting_image_crop">Device is not supporting image crop</string>
    <string name="str_OK">OK</string>
    <string name="str_volume">volume</string>
    <string name="str_food_name">food name</string>
    <string name="str_amount">amount</string>
    <string name="str_height">height</string>
    <string name="str_weight">weight</string>
    <string name="str_head">head circ</string>
    <string name="str_formula">formula</string>
    <string name="str_Diaper_type">Diaper type</string>
    <string name="str_Cancel">Cancel</string>
    <string name="str_Baby_growth_data">Baby growth data</string>
    <string name="str_Edit">Edit</string>
    <string name="str_New_Content">New Content</string>
    <string name="str_Delete">Delete</string>
    <string name="str_Activities_summary">Activities summary</string>
    <string name="str_Sleep_activity_summary">Sleep activity summary</string>
    <string name="str_Feeding_activity_summary">Feeding activity summary</string>
    <string name="str_Diaper_activity_summary">Diaper activity summary</string>
    <string name="str_Baby_development_summary">Baby development summary</string>
    <string name="str_Welcome_parent">Welcome Parent</string>
    <string name="str_Please_sign_in_or_create_new_user_account">Please sign in or create new user account</string>
    <string name="str_Log_in">Log in</string>
    <string name="str_New_user">New user</string>
    <string name="str_Baby_name">Baby name</string>
    <string name="str_Please_fill_in_your_baby_information">Please fill in your baby information</string>
    <string name="str_Latest_picture">Latest picture</string>
    <string name="str_Time">Time</string>
    <string name="str_Date">Date</string>
    <string name="str_Alarm_is_not_set">Alarm is not set</string>
    <string name="str_Pee">Pee</string>
    <string name="str_Poo">Poo</string>
    <string name="str_Pee_and_poo">Pee and poo</string>
    <string name="str_Disease_log">Disease Log</string>
    <string name="str_Right_breastfeeding">Right breastfeeding</string>
    <string name="str_Left_breastfeeding">Left breastfeeding</string>
    <string name="str_Add_pumped_stock">Add pumped stock</string>
    <string name="str_Use_pumped_stock">Use pumped stock</string>
    <string name="str_Feeding_duration">Feeding Duration</string>
    <string name="str_Not_enough_remaining_stock">Not enough remaining stock</string>
    <string name="str_Body_Height">Body Height</string>
    <string name="str_Height">Height</string>
    <string name="str_Head_Circumference">Head Circumference</string>
    <string name="str_Head_Circ">Head Circ</string>
    <string name="str_Head_circ">Head circ</string>
    <string name="str_Body_Weight">Body Weight</string>
    <string name="str_Invalid_number">invalid number</string>
    <string name="str_Age_is">Age is</string>
    <string name="str_Body_height_is">Body height is </string>
    <string name="str_Head_circumference_is">Head circumference is </string>
    <string name="str_Body_weight_is">Body weight is </string>
    <string name="str_Night_sleep">Night sleep</string>
    <string name="str_Day_sleep">Day sleep</string>
    <string name="str_Sleep_duration">Sleep Duration</string>
    <string name="str_Name_is">Name is</string>
    <string name="str_Birthday_on">Birthday on</string>
    <string name="str_Gender_is">Gender is</string>
    <string name="str_on">on</string>
    <string name="str_at">at</string>
    <string name="str_Vaccine_Log">Vaccine Log</string>
    <string name="str_Reminder_is_not_set">Reminder is not set</string>
    <string name="str_Reminder_is_set_at">Reminder is set at</string>
    <string name="str_Add_baby_image">Add baby image</string>
    <string name="str_Please_fill_in_food_name_and_amount">Please fill in food name and amount</string>
    <string name="str_Please_fill_the_formula_milk_volume">Please fill the formula milk volume</string>
    <string name="str_Food_name_should_be_less_than_20_characters">Food name should be less than 20 characters</string>
    <string name="str_Amount_should_be_positive_and_maximum_is_9999999_gr">Amount should be positive and maximum is 99999.99 gr</string>
    <string name="str_Volume_should_be_positive_and_maximum_is_9999999_mL">Volume should be positive and maximum is 99999.99 mL</string>
    <string name="str_Please_fill_pump_milk_volume">Please fill pump milk volume</string>
    <string name="str_Digit_is_not_completed">"Digit is not completed"</string>
    <string name="str_Invalid_digit_entered">Invalid digit entered</string>
    <string name="str_Log_in_with_facebook_account">Log in with facebook account :</string>
    <string name="str_Growing_Chart">Growing Chart</string>
    <string name="str_Months_on">Months on</string>
    <string name="str_Percentiles_of_height_for_age_girls_aged_0_2_years">Percentiles of height-for-age girls aged 0 - 2 years</string>
    <string name="str_Percentiles_of_height_for_age_girls_aged_2_5_years">Percentiles of height-for-age girls aged 2 - 5 years</string>
    <string name="str_Percentiles_of_height_for_age_boys_aged_0_2_years">Percentiles of height-for-age boy aged 0 - 2 years</string>
    <string name="str_Percentiles_of_height_for_age_boys_aged_2_5_years">Percentiles of height-for-age boy aged 2 - 5 years</string>
    <string name="str_Percentiles_of_weight_for_age_girls_aged_0_5_years">Percentiles of weight-for-age girls aged 0 - 5 years</string>
    <string name="str_Today">Today</string>
    <string name="str_This_week">This week</string>
    <string name="str_This_month">This month</string>
    <string name="str_All">All</string>
    <string name="str_for_this_week">for this week</string>
    <string name="str_Default_time_filter">Default time filter</string>
    <string name="str_Quick">Quick</string>
    <string name="str_Email">Email</string>
    <string name="str_Password">Password</string>
    <string name="str_Confirm_password">Confirm password</string>
    <string name="var_KEY_COUNTER_METHOD_BREASTFEEDING">KEY_COUNTER_METHOD_BREASTFEEDING</string>
    <string name="var_KEY_COUNTER_METHOD_SLEEP">KEY_COUNTER_METHOD_SLEEP</string>
    <string name="var_KEY_DEF_TIME_FILTER_TIMELINE">KEY_DEF_TIME_FILTER_TIMELINE</string>
    <string name="var_KEY_DEF_TIME_FILTER_FEEDING">KEY_DEF_TIME_FILTER_FEEDING</string>
    <string name="var_KEY_DEF_TIME_FILTER_DIAPER">KEY_DEF_TIME_FILTER_DIAPER</string>
    <string name="var_KEY_DEF_TIME_FILTER_SLEEP">KEY_DEF_TIME_FILTER_SLEEP</string>
    <string name="var_KEY_DEF_TIME_FILTER_GROWTH">KEY_DEF_TIME_FILTER_GROWTH</string>
    <string name="var_KEY_DEF_TIME_FILTER_DISEASE">KEY_DEF_TIME_FILTER_DISEASE</string>
    <string name="var_KEY_DEF_TIME_FILTER_VACCINE">KEY_DEF_TIME_FILTER_VACCINE</string>
</resources>