<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".core.ActivityHome">

    <item
        android:id="@+id/action_disease"
        android:icon="@drawable/ic_disease_add"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/str_Create_Disease_Log" />
    <item
        android:id="@+id/action_vaccine"
        android:icon="@drawable/ic_vaccine_add"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/str_Create_Vaccine_Log" />
    <item
        android:id="@+id/filter_today"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/str_Today" />
    <item
        android:id="@+id/filter_this_week"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/str_This_week" />
    <item
        android:id="@+id/filter_this_month"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/str_This_month" />
    <item
        android:id="@+id/filter_all"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/str_All" />

</menu>
