<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new_baby"
        android:orderInCategory="1"
        android:showAsAction="collapseActionView"
        android:title="@string/str_Add_Baby" />
    <item
        android:id="@+id/action_edit_baby"
        android:orderInCategory="2"
        android:showAsAction="collapseActionView"
        android:title="@string/str_Edit_Baby" />
    <item
        android:id="@+id/action_delete_baby"
        android:orderInCategory="3"
        android:showAsAction="collapseActionView"
        android:title="@string/str_Delete_Baby" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:showAsAction="collapseActionView"
        android:title="@string/str_Settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/str_About_Kido" />

    <!--<item-->
    <!--android:id="@+id/action_logout"-->
    <!--android:orderInCategory="3"-->
    <!--android:showAsAction="never"-->
    <!--android:title="@string/str_Logout" />-->

</menu>
