<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/text_primary_pink"
            android:textSize="100sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/app_company"
            android:textColor="@color/text_primary_pink"
            android:textSize="@dimen/text_size_micro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/app_copy_right"
            android:textColor="@color/text_primary_pink"
            android:textSize="@dimen/text_size_micro" />

        <TextView
            android:id="@+id/application_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@color/text_primary_pink"
            android:textSize="@dimen/text_size_micro" />

    </LinearLayout>

</LinearLayout>