<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timeline_quick_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/quickbutton_shadow"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/button_feeding"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/quick_button_feeding_image"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_feeding_navigation" />

            <TextView
                android:id="@+id/quick_button_feeding_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:paddingTop="4dp"
                android:text="@string/str_Add_Feeding"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_diaper"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/quick_button_diaper_image"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_diaper_navigation" />

            <TextView
                android:id="@+id/quick_button_diaper_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:paddingTop="4dp"
                android:text="@string/str_Add_Diaper"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_sleep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/quick_button_sleep_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_sleep_navigation" />

            <TextView
                android:id="@+id/quick_button_sleep_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:paddingTop="4dp"
                android:text="@string/str_Add_Sleep"
                android:textColor="@color/transparent_blue"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_measurement"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/quick_button_measurement_image"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_measurement_navigation" />

            <TextView
                android:id="@+id/quick_button_measurement_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:paddingTop="4dp"
                android:text="@string/str_Add_Growth"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>